--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -10,6 +10,13 @@
  * defined in the other CSS/SCSS files in this directory. It is generally better to create a new
  * file per style scope.
  *
- *= require_tree .
- *= require_self
+ * require_tree .
+ * require_self
  */
+@import "bootswatch/cosmo/variables";
+
+@import "bootstrap";
+
+body { padding-top: 60px; }
+
+@import "bootswatch/cosmo/bootswatch";
