--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,22 +1,28 @@
-<h1>Sign up</h1>
-
+<br>
 <div class="row">
   <div class="col-md-6 col-md-offset-3">
-    <%= form_for(@user) do |f| %>
-
-      <%= f.label :name, class: 'form-control' %>
-      <%= f.text_field :name %>
-
-      <%= f.label :email %>
-      <%= f.text_field :email, class: 'form-control' %>
-
-      <%= f.label :password %>
-      <%= f.password_field :password, class: 'form-control' %>
-
-      <%= f.label :password_confirmation, "Confirmation" %>
-      <%= f.password_field :password_confirmation %>
-
-      <%= f.submit "Create my account", class: "btn btn-large btn-primary" %>
-    <% end %>
+    <div class="panel panel-default">
+      <div class="panel-heading">
+        <h3 class="panel-title">Sign up</h3>
+      </div>
+      <div class="panel-body">
+        <%= form_for(@user) do |f| %>
+    
+          <%= f.label :name %>
+          <%= f.text_field :name, class: 'form-control', placeholder: '名前を20文字までで入力' %><br>
+    
+          <%= f.label :email %>
+          <%= f.text_field :email, class: 'form-control' %><br>
+    
+          <%= f.label :password %>
+          <%= f.password_field :password, class: 'form-control' %><br>
+    
+          <%= f.label :password_confirmation, "Confirmation" %>
+          <%= f.password_field :password_confirmation, class: 'form-control' %><br>
+    
+          <%= f.submit "Create my account", class: "btn btn-large btn-primary" %>
+        <% end %>
+      </div>
+    </div>
   </div>
 </div>
